# FastAPI_TODO

./: .dockerignore  .gitignore  README.md  TO-DO.txt  docker-compose.yml  pyproject.toml
backend/: Dockerfile  requirments.txt  run.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  tasks.py  user.py
backend/app/repositories/: tasks_repositories.py  users_repositories.py
backend/app/router/: __init__.py  tasks.py  users.py
backend/app/schemas/: tasks.py  users.py
backend/app/services/: tasks.py  users.py
frontend/assets/: index.html  note.html  notes.html  styles.css
frontend/assets/js/: api.js  auth.js  format.js  note.js  notes.js  storage.js
