[project]
name = "micro-to-do"
version = "0.1.0"
description = ""
authors = [
    {name = "showman228",email = "nekrasovaleksey.1999@gmail.com"}
]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "uvicorn[standard] (>=0.50.2,<0.51.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "greenlet (>=3.5.3,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
